--- a/Views/Account/RegisterUser.cshtml
+++ b/Views/Account/RegisterUser.cshtml
@@ -7,6 +7,22 @@
 @*<h1>RegisterUser</h1>
 
     <h4>RegisterUser</h4>*@
+<head>
+    <script type="text/javascript">
+        $(function () {
+            $("#btnSubmit").click(function () {
+                var password = $("#password").val();
+                var confirmPassword = $("#passwordConfirm").val();
+                if (password != confirmPassword) {
+                    alert("Passwords do not match.");
+                    return false;
+                }
+                return true;
+            });
+        });
+    </script>
+
+</head>
 <hr />
 <div class="panel panel-default">
     <div class="panel-body">
@@ -58,8 +74,27 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label asp-for="password" class="control-label"></label>
-                                <input type="password" asp-for="password" class="form-control" />
+                                <input type="password" asp-for="password" id="password" class="form-control" />
                                 <span asp-validation-for="password" class="text-danger"></span>
+                                @*<span asp-validation-for="Input.Password" class="text-danger"></span>*@
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="passwordConfirm" class="control-label"></label>
+                                <input type="password" asp-for="passwordConfirm" id="passwordConfirm" class="form-control" />
+                                <span asp-validation-for="passwordConfirm" class="text-danger"></span>
+                                @*<span asp-validation-for="Input.Password" class="text-danger"></span>*@
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="Phone" class="control-label"></label>
+                                <input asp-for="Phone" class="form-control" />
+                                <span asp-validation-for="Phone" class="text-danger"></span>
                                 @*<span asp-validation-for="Input.Password" class="text-danger"></span>*@
                             </div>
                         </div>
@@ -72,14 +107,13 @@
                             </div>
                         </div>
                     </div>
-
                     @*<div class="row">
                         <div class="col-md-8">
                         </div>
 
                         <div class="col-md-8">
                         </div>
-                    </div>*@
+                        </div>*@
 
                 </div>
             </div>
@@ -107,7 +141,7 @@
 
                 </div>*@
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" id="btnSubmit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
