--- a/Views/Account/getAllUsers.cshtml
+++ b/Views/Account/getAllUsers.cshtml
@@ -1,103 +1,135 @@
-﻿
-@model IEnumerable<BiodataTest.ViewModels.UsersViewModels>
+﻿@model IEnumerable<BiodataTest.ViewModels.UsersViewModels>
 
-@{
-    ViewData["Title"] = "getAllUsers";
-}
 
-<h1>getAllUsers</h1>
-@*<form method="get">
-        <div class="form-group">
-            <div class="input-group">
-                <input type="search" placeholder="Search ID, Customer, Date Imported, vCenter, Imported By, or Notes" class="form-control" asp-for="SearchTerm" />
+<head>
+    <script src="~/js/site.js"></script>
+</head>
+ <div id="PlaceHolderHere"></div>
+<body>
+   
+
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <form asp-controller="Account" asp-action="getAllUsers" method="get">
+
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Search User</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <p>
+                                    Search With: <input type="text" name="SearchString" placeholder="email or username" id="SearchString" />
+
+                                    Order By: <input type="text" name="sortOrder" id="sortOrder" />
+                                    <input type="submit" class="btn btn-danger btn-sm" />
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-4">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <p>
+                    @*Order By: <input type="text" name="sortOrder" id="sortOrder" />*@
+                    @*<input type="submit" class="btn btn-danger btn-sm" />*@
+                </p>
+
+                @*<input type="submit" class="btn btn-danger btn-sm" />*@
+            </form>
+            <p>
+                <a asp-action="RegisterUser" asp-controller="Account">Create New User</a>
+            </p>
+        </div>
+    </div>
+
+
+
+    <div class="panel panel-success">
+        <div class="panel-heading">Existing Users</div>
+        <div class="panel-body">
+            <div class="row">
+                <table class="table-bordered">
+                    <thead class="table th">
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.UserName)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Email)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.FirstName)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.LastName)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.RoleName)
+                            </th>
+                            @*<th>
+                                @Html.DisplayNameFor(model => model.Role)
+                                </th>*@
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody class="table tb">
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.UserName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Email)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.FirstName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.LastName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.RoleName)
+                                </td>
+                                <td>
+                                    @*<a asp-action="EditUsers" asp-route-id="@item.Id">Edit</a> |*@
+                                    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#UpdateUser" data-url="@Url.Action($"EditUsers/{item.Id}")"> Edit</button>
+                                    <br>
+                                   @* <a asp-action="Details" asp-controller="Account" asp-route-id="@item.Id">Details</a> |*@
+                                    <div>     
+                                        @*<button type="button" class="btn btn-primary"  data-url="@Url.Action($"AddUserRole/{item.Id}")" onclick="return confirm('Are you sure of adding this user to role?')"> Add User Role</button>*@
+                                        <input type="button" class="btn btn-primary" value="Add User Role" onclick="location.href='@Url.Action("AddUserRole", "Account", new { Id = item.Id})'" />
+                                        <br>
+                                        <input type="button" class="btn btn-primary" value="Remove User Role" onclick="location.href='@Url.Action("RemoveUserRole", "Account", new { Id = item.Id})'" />
+                                        @*<li class="nav-item">
+                                            <a href="@Url.Action("AddUserRole", "Account", new { Id = item.Id})" onclick="return confirm('Are you sure of adding this user to role?')">Add User Role</a>
+                                        </li>*@
+                                        @*<li class="nav-item">
+                                            <a href="@Url.Action("RemoveUserRole", "Account", new { Id = item.Id})" onclick="return confirm('Are you sure of removing user from role?')">Remove User Role</a>
+                                        </li>*@
+                                    </div>
+
+                                    @*<div>
+                                        <form asp-action="DeleteUsers" asp-controller="Account" method="post">
+                                        <button asp-action="DeleteUsers" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete?')" class="btn btn-danger btn-sm">Delete</button>
+                                        </form>
+
+                                        </div>*@
+
+                                    @*<a asp-action="DeleteUsers" asp-controller="Account" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete?')">Delete</a>*@
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
             </div>
         </div>
-    </form>*@
-<form asp-controller="Account" asp-action="getAllUsers" method="get">
-    <p>
-        Search With: <input type="text" name="SearchString" id="SearchString" />
+    </div>
 
-        Order By: <input type="text" name="sortOrder" id="sortOrder" />
-        <input type="submit" class="btn btn-danger btn-sm" />
-    </p>
-    <p>
-        @*Order By: <input type="text" name="sortOrder" id="sortOrder" />*@
-        @*<input type="submit" class="btn btn-danger btn-sm" />*@
-    </p>
 
-    @*<input type="submit" class="btn btn-danger btn-sm" />*@
-</form>
-<p>
-    <a asp-action="RegisterUser" asp-controller="Account">Create New User</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.UserName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RoleName)
-            </th>
-            @*<th>
-                    @Html.DisplayNameFor(model => model.Role)
-                </th>*@
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RoleName)
-                </td>
-                <td>
-                    <a asp-action="EditUsers" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-controller="Account" asp-route-id="@item.Id">Details</a> |
-                    <div>
-                        @*<form asp-action="AddUserRole" asp-controller="Account" method="get">
-                            <button asp-action="AddUserRole" asp-route-id="@item.Id" onclick="return confirm('Are you sure of adding this user to role?')" class="btn btn-danger btn-sm">Manage User Role</button>
-                        </form>*@
-                        <li class="nav-item">
-                            <a href="@Url.Action("AddUserRole", "Account", new { Id = item.Id})" onclick="return confirm('Are you sure of adding this user to role?')">Add User Role</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="@Url.Action("RemoveUserRole", "Account", new { Id = item.Id})" onclick="return confirm('Are you sure of removing user from role?')">Remove User Role</a>
-                        </li>
-                    </div>
+</body>
 
-                    @*<div>
-                        <form asp-action="DeleteUsers" asp-controller="Account" method="post">
-                            <button asp-action="DeleteUsers" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete?')" class="btn btn-danger btn-sm">Delete</button>
-                        </form>
-
-                    </div>*@
-
-                    @*<a asp-action="DeleteUsers" asp-controller="Account" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete?')">Delete</a>*@
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
