--- a/Views/Career/Application.cshtml
+++ b/Views/Career/Application.cshtml
@@ -8,7 +8,7 @@
 <head>
     <script type="text/javascript">
             $(document).ready(function () {
-         CKEDITOR.replace(‘#skills’);
+         CKEDITOR.replace('#skills');
         });
     </script>
 </head>
